Use adc as provided in integration tests